rrefac: Adicionado professores dos cursos ao buscar a lista de cursos ativos