@@ -2,27 +2,47 @@ package com.github.edulook.look.endpoint.internal.mapper.course.impl;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
 import com.github.edulook.look.core.model.Course;
+import com.github.edulook.look.core.model.Teacher;
 import com.github.edulook.look.endpoint.internal.mapper.course.CourseAndDTOMapper;
 import com.github.edulook.look.endpoint.io.course.CourseDTO;
+import com.github.edulook.look.endpoint.io.course.CourseDTO.TeacherDTO;
 
 @Component
 public class CourseAndDTOMapperImpl implements CourseAndDTOMapper{
 
     @Override
-    public CourseDTO toDto(Course course) {
-        return new CourseDTO(
-            course.getId(),
-            course.getName(),
-            course.getDescription(),
-            course.getOwnerId(),
-            course.getRoom(),
-            course.getState()
-        );
+    public CourseDTO toDTO(Course course) {
+        return CourseDTO
+            .builder()
+            .id(course.getId())
+            .description(course.getDescription())
+            .name( course.getName())
+            .owner(course.getOwnerId())
+            .room(course.getRoom())
+            .state(course.getState())
+            .teachers(toTeacherDTOList(course.getTeachers()))
+            .build();
+    }
+
+    private TeacherDTO toDTO(Teacher source) {
+        return TeacherDTO
+            .builder()
+            .id(source.getId())
+            .name(source.getName())
+            .email(source.getEmail())
+            .photo(source.getPhoto())
+            .build();
+    }
+
+    private List<TeacherDTO> toTeacherDTOList(List<Teacher> source) {
+        return source
+            .stream()
+            .map(this::toDTO)
+            .toList();
     }
 
     @Override
@@ -32,13 +52,13 @@ public class CourseAndDTOMapperImpl implements CourseAndDTOMapper{
     }
 
     @Override
-    public List<CourseDTO> toDtoList(List<Course> list) {
+    public List<CourseDTO> toDTOList(List<Course> source) {
         return Optional
-            .ofNullable(list)
+            .ofNullable(source)
             .orElse(List.of())
             .stream()
-            .map(this::toDto)
-            .collect(Collectors.toList());
+            .map(this::toDTO)
+            .toList();
     }
 
     
